Update base image.

--- a/description.org
+++ b/description.org
@@ -24,3 +24,5 @@
    - https://percy.io/
    - https://github.com/mapbox/pixelmatch
    - https://segment.com/blog/perceptual-diffing-with-niffy/
+*** Change tracker alternatives
+   - https://obserwise.datapare.com/
